fixed overflow and form styles

--- a/client/src/components/SubscribeForm/SubscribeForm.scss
+++ b/client/src/components/SubscribeForm/SubscribeForm.scss
@@ -7,7 +7,7 @@ p{
 }
 
 .react-reveal{
-  min-width: 75% !important;
+  min-width: 100% !important;
 }
 
 .firstWord{
